--- a/Gmail.ipynb
+++ b/Gmail.ipynb
@@ -14150,7 +14150,8 @@
     "- In 2023 Uber receipts was the most frequent account I receive emails from. About 77% of the total emails I received from Uber Receipts came in 2023. Also, About 53.7% of emails received from Adidas were received in 2023. This shows a possible spike in patterns on my Uber and Adidas accounts\n",
     "- August is the month with the most frequency of emails received. January and October had very close numbers of frequency\n",
     "- In 2023, January was the month I received the most emails. 2023 alone made about 62% of my total emails received in January. Showed a significant spike in pattern\n",
-    "- My name (Daniel) was the most frequent subject from my Inbox. "
+    "- My name (Daniel) was the most frequent subject from my Inbox. \n",
+    "- With all these information, I can target the most frequent email accounts that I deem unwanted, delete them and track what websites/accounts I can unsubscribe from to free up my Inbox "
    ]
   }
  ],
